fixed popup overlay z-index

--- a/packages/spa/src/assets/sass/_popup.scss
+++ b/packages/spa/src/assets/sass/_popup.scss
@@ -16,7 +16,7 @@
     // overlay
     .popup-overlay {
         position: fixed;
-        z-index: -1;
+        z-index: 0;
         left: 0;
         top: 0;
         width: 100%;
